# Misconception-Diagnosing-Feedback-Agent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  EVAL.md  KICKOFF.md  PLAN.md  PRD.md  README.md  STATUS.md  preflight.sh  pyproject.toml  smoke test.py  smoke_test.py
app/: __init__.py  dashboard.py
data/: README.md
eval/: __init__.py  asap.py  benchmark.py  dataset.py  efficacy.py  harness.py  metrics.py  simulated_learner.py  tagging.py  test_eval.py
eval/fixtures/: README.md  asap_meta.json  asap_sample.csv  eedi_train_sample.csv  misconception_mapping.csv
src/feedback_agent/: __init__.py  agent.py  confidence.py  config.py  diagnosis.py  grading.py  models.py  remediation.py  sdk_client.py  state.py  trace.py
src/feedback_agent/prompts/: __init__.py  diagnose_v1.md  diagnose_v2.md  grade_free_response_v1.md  learner_v1.md  remediate_generic_v1.md  remediate_targeted_v1.md
src/feedback_agent/taxonomy/: __init__.py  retrieval.py
src/feedback_agent/tools/: __init__.py  math_check.py
