[project]
name = "feedback-agent"
version = "0.1.0"
description = "Misconception-diagnosing feedback agent for multiple-choice math (Eedi spine)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "pandas",
    "scikit-learn",
    "pydantic>=2",
    "sentence-transformers>=5.6.0",
    "chromadb>=1.5.9",
]

# Later-day deps, added on the day they're needed:
#   sympy      -> Day 4 (math_check tool)
#   streamlit  -> Day 6 (dashboard)

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feedback_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["eval"]
